# SudokuSolver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-release.yml  rust.yml
src/: board.rs  cli.rs  io.rs  main.rs  solver.rs
