[package]
name = "sudokusolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
csv = "*"
clap = { version = "*", features = ["derive"] }
shellexpand = "3.0.0"

[target.'cfg(windows)'.dependencies]
termion = {git="https://github.com/MOZGIII/termion-with-windows-support/",branch="windows-support"}

[target.'cfg(not(windows))'.dependencies]