[package]
name = "sudokusolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[target.'cfg(windows)'.dependencies]
termion_win = {git="https://github.com/MOZGIII/termion-with-windows-support/",branch="windows-support",package="termion"}

[target.'cfg(not(windows))'.dependencies]
termion = "*"

[dependencies]
csv = "*"
clap = { version = "*", features = ["derive"] }
shellexpand = "3.0.0"
